--- a/aur-repo/python-jlc2kicadlib/PKGBUILD
+++ b/aur-repo/python-jlc2kicadlib/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=python-jlc2kicadlib
-_name=JLC2KiCadLib
-pkgver=1.0.31
+_name=${pkgname#python-}
+pkgver=1.0.32
 pkgrel=0
 epoch=
 pkgdesc="JLC2KiCad_lib is a python script that generate a component library (symbol, footprint and 3D model) for KiCad from the JLCPCB/easyEDA library."
@@ -24,7 +24,7 @@ makedepends=(python-build
 options=('!strip')
 source=("${_name//-/_}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/$_name/${_name//-/_}-$pkgver.tar.gz")
 noextract=()
-sha256sums=('dc9abc4849e8d17272652d2b41b2413e1cee23f6d58276929f3af5c8753bd8fd')
+sha256sums=('ef9c51b3f612a5e055f356b19b657a94dc907d8c67708ebb976d698defa06448')
 
 build() {
     cd "${srcdir}/${_name//-/_}-${pkgver}"
