--- a/aur-repo/python-pydevicetree/PKGBUILD
+++ b/aur-repo/python-pydevicetree/PKGBUILD
@@ -2,19 +2,26 @@
 
 pkgname=python-pydevicetree
 _name=${pkgname#python-}
-pkgver=0.0.13
-pkgrel=13
+pkgver=0.0.12
+pkgrel=1
 epoch=
 pkgdesc="This is a Python 3 library for parsing, querying, and modifying Devicetree Source v1 files as described in the Devicetree Specification v0.2."
 arch=('any')
-url="https://github.com/sifive/pydevicetree"
-license=('Apache')
+url="https://pypi.org/project/pydevicetree"
+license=('Apache-2.0')
 groups=()
-depends=('python')
-makedepends=(python-build
-    python-installer
-    python-wheel
-    python-setuptools)
+_pydeps=(
+    pyparsing)
+depends=(
+    python
+    "${_pydeps[@]/#/python-}")
+_pymakedeps=(
+    build
+    installer
+    wheel
+    setuptools)
+makedepends=(
+    "${_pymakedeps[@]/#/python-}")
 checkdepends=()
 optdepends=()
 provides=()
@@ -24,9 +31,9 @@ backup=()
 options=('!strip')
 install=
 changelog=
-source=("${_name}-${pkgver}.zip::https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz")
+source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz")
 noextract=()
-sha256sums=('5700c05df89bad8fd729c11aa6f764a3323bcb3796f13b32481ae34445cfc1b7')
+sha256sums=('1ca19ec38bec0095a0a8dc4753a578e8c6e9a70873112547d30c92b32411f667')
 #validpgpkeys=()
 
 build() {
