--- a/aur-repo/linuxqq/PKGBUILD
+++ b/aur-repo/linuxqq/PKGBUILD
@@ -2,9 +2,8 @@
 # Contributor: Integral <integral@member.fsf.org>
 
 pkgname=linuxqq
-pkgver=3.2.10_25765
-_pkgver_loong64=3.2.9_24815
-pkgrel=4
+pkgver=3.2.12_26702
+pkgrel=2
 epoch=4
 pkgdesc="New Linux QQ based on Electron"
 arch=('x86_64' 'aarch64' 'loong64')
@@ -13,14 +12,14 @@ license=('LicenseRef-QQ')
 conflicts=("${pkgname}-nt-bwrap")
 depends=('nss' 'alsa-lib' 'gtk3' 'gjs' 'at-spi2-core' 'libvips' 'openjpeg2')
 optdepends=('libappindicator-gtk3: Allow QQ to extend a menu via Ayatana indicators in Unity, KDE or Systray (GTK+ 3 library).')
-source_x86_64=("https://dldir1.qq.com/qqfile/qq/QQNT/7bb2ea67/${pkgname}_${pkgver/_/-}_amd64.deb")
-source_aarch64=("https://dldir1.qq.com/qqfile/qq/QQNT/7bb2ea67/${pkgname}_${pkgver/_/-}_arm64.deb")
-source_loong64=("https://dldir1.qq.com/qqfile/qq/QQNT/cbb0e5d9/${pkgname}_${_pkgver_loong64/_/-}_loongarch64.deb")
+source_x86_64=("https://dldir1.qq.com/qqfile/qq/QQNT/f74d4392/${pkgname}_${pkgver/_/-}_amd64.deb")
+source_aarch64=("https://dldir1.qq.com/qqfile/qq/QQNT/f74d4392/${pkgname}_${pkgver/_/-}_arm64.deb")
+source_loong64=("https://dldir1.qq.com/qqfile/qq/QQNT/f74d4392/${pkgname}_${pkgver/_/-}_loongarch64.deb")
 source=("${pkgname}.sh")
 sha512sums=('f463c5cb3323b86d9ea312d75f1e53d064885dabde2d1d6a554e083e15b5ff7fc548a96670284e5e996456c7a2ce4a25e9acb80bf48459ea47a8813d62203cb4')
-sha512sums_x86_64=('b8798b199bf4a2f83b802576b09b451a4fe213224095387370a658e52fb50be090e12c14855c69d08ec970f18011bc457a10338ed4d5a479a33eced77172cf61')
-sha512sums_aarch64=('f1f155510c875a70ff08744397218f9548e856c2805e95ea0c2e40229e17cddb7cfd7a34d6134d3cfa2189f903fe07052852c7252a97b7564a0b4063cb238631')
-sha512sums_loong64=('3d7a4ac16a9221acab5f333e545757d505d3d8d45077d6d6bae86bfaf8c48b058a4869d7b1d277518baf7b0b24a850c4d5fa7a8cfc317649cff6027ef224552f')
+sha512sums_x86_64=('8e2219e07355b80351eea570e2a51f3bf8b8266e45609007391b65d58d99f297033fb2527cf2a2099ccd76715676505e76e7fa1539c3348f10faeb77651a6f2b')
+sha512sums_aarch64=('4271c746c68d0ec4baeffea8f4d7b07d611bdfbbb8d73cd3792bcf07bf48524f365bd978efb9d97156e477fd4dfcff3619f4c8064d6d32da68de22cef7a0cd36')
+sha512sums_loong64=('bb25d4675ed9435c14e95ceb7d7a0895c125aa18626d278908561fb6f01d7af21e6f90cc42b23c256d61ea91baa2d76e35f42c7be9f9059b80e4b0ebb40e74fb')
 options=('!strip' '!debug')
 
 package() {
