--- a/aur-repo/hpmicro-manufacturing-tool-bin/PKGBUILD
+++ b/aur-repo/hpmicro-manufacturing-tool-bin/PKGBUILD
@@ -4,7 +4,7 @@ pkgbase=hpmicro-manufacturing-tool-bin
 pkgname=${pkgbase}
 _pkgname=HPMicro_Manufacturing_Tool
 pkgver=0.4.1
-pkgrel=1
+pkgrel=2
 pkgdesc="HPMicro Manufacturing Tool 是 HPMicro 公司推出的配置及批量烧写工具，旨在帮助企业用户快速批量的对 HPMicro 公司推出的芯片进行镜像配置及烧写。"
 arch=(x86_64)
 url="https://github.com/hpmicro/hpm_manufacturing_tool"
@@ -84,7 +84,7 @@ Name[zh_CN]=先辑制造工具 GUI
 GenericName=HPMicro Manufacturing Tool GUI
 GenericName[zh_CN]=先辑制造工具 GUI
 Comment=electronics gui
-Exec=xdg-open /opt/hpmicro/${pkgname%-bin}/hpm_manufacturing_gui
+Exec=/opt/hpmicro/${pkgname%-bin}/hpm_manufacturing_gui
 Icon=hpmicro.png
 Terminal=false
 Categories=Development;IDE;Electronics;
@@ -98,7 +98,7 @@ Name[zh_CN]=先辑制造工具镜像帮助程序
 GenericName=HPMicro Manufacturing Image Helper
 GenericName[zh_CN]=先辑制造工具镜像帮助程序
 Comment=electronics gui
-Exec=xdg-open /opt/hpmicro/${pkgname%-bin}/hpm_image_helper
+Exec=/opt/hpmicro/${pkgname%-bin}/hpm_image_helper
 Icon=hpmicro.png
 Terminal=false
 Categories=Development;IDE;Electronics;
