--- a/aur-repo/hpmicro-manufacturing-tool-bin/PKGBUILD
+++ b/aur-repo/hpmicro-manufacturing-tool-bin/PKGBUILD
@@ -49,7 +49,7 @@ ACTION!="add|change", SUBSYSTEM!="usb_device", GOTO="hpmicro_rules_end"
 
 #SUBSYSTEM=="gpio", MODE="0666", GROUP="uucp", TAG+="uaccess"
 
-#SUBSYSTEM!="usb|tty|hidraw", GOTO="hpmicro_rules_end"
+SUBSYSTEM!="usb|tty|hidraw", GOTO="hpmicro_rules_end"
 
 # Please keep this list sorted by VID:PID
 
