--- a/aur-repo/cloudflarespeedtest-git/PKGBUILD
+++ b/aur-repo/cloudflarespeedtest-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Contributor: taotieren <admin@taotieren.com>
 
 pkgname=cloudflarespeedtest-git
-pkgver=2.2.5.16.g8a6670b
+pkgver=2.2.5.19.g1995d08
 pkgrel=1
 pkgdesc="「自选优选 IP / 过滤假墙」测试 Cloudflare CDN 延迟和速度，获取最快 IP (IPv4+IPv6)！ "
 arch=(aarch64
