--- a/aur-repo/can-utils-git/PKGBUILD
+++ b/aur-repo/can-utils-git/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgbase=can-utils-git
 pkgname=can-utils-git
-pkgver=2023.03.r222.g8a156fe
+pkgver=2023.03.r224.g30b6b04
 pkgrel=1
 groups=()
 pkgdesc="Linux-CAN / SocketCAN user space applications"
