fantascene-dynamic-wallpaper-git: auto updated to 1.8.1.r7.g17d4fe8-1

--- a/aur-repo/fantascene-dynamic-wallpaper-git/PKGBUILD
+++ b/aur-repo/fantascene-dynamic-wallpaper-git/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgname=fantascene-dynamic-wallpaper-git
 srcname=fantascene-dynamic-wallpaper-git
-pkgver=1.8.1.r4.g7346149
-pkgrel=2
+pkgver=1.8.1.r7.g17d4fe8
+pkgrel=1
 pkgdesc=" dynamic wallpaper. A very nice animated wallpaper on X11 systems.Support Movie and Web animated wallpaper."
 arch=(x86_64
     aarch64
