--- a/aur-repo/rkbin-git/PKGBUILD
+++ b/aur-repo/rkbin-git/PKGBUILD
@@ -10,7 +10,11 @@ arch=('x86_64')
 url="https://github.com/rockchip-linux/rkbin"
 license=('Commercial')
 groups=()
-depends=('libusb')
+depends=(
+    'bash'
+    'gcc-libs'
+    'glibc'
+    'libusb')
 makedepends=('git')
 checkdepends=()
 optdepends=()
@@ -24,12 +28,13 @@ changelog=
 source=("${pkgname}::git+${url}.git")
 noextract=()
 sha256sums=('SKIP')
-#validpgpkeys=()
 
 pkgver() {
-    cd "${srcdir}/${pkgname}/"
-#     git describe --long --tags | sed 's/v//g;s/\([^-]*-g\)/r\1/;s/-/./g'
-    printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
+    cd "${srcdir}/${pkgname}"
+    ( set -o pipefail
+        git describe --long --tag --abbrev=7 2>/dev/null | sed 's/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g' ||
+        printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
+    )
 }
 
 prepare()
