--- a/aur-repo/nuc980-nuwriter-git/PKGBUILD
+++ b/aur-repo/nuc980-nuwriter-git/PKGBUILD
@@ -5,7 +5,9 @@ pkgver=r23.20fb730
 pkgrel=1
 epoch=
 pkgdesc="The Nu-writer Command Tool is a linux console application consisting of functions to access storage(eg. DRAM,NAND,SPINOR,SPINAND,SD) in a NUC980 family processors"
-arch=('any')
+arch=('x86_64'
+    'aarch64'
+    'riscv64')
 url="https://gitee.com/OpenNuvoton/NUC980_NuWriter_CMD"
 license=('GPL-3.0-or-only')
 groups=()
