--- a/aur-repo/ch34xsercfg-git/lilac.yaml
+++ b/aur-repo/ch34xsercfg-git/lilac.yaml
@@ -6,7 +6,7 @@ build_prefix: extra-x86_64
 pre_build: vcs_update
 
 repo_depends:
-  - libch9344ser-git
+  - ch9344ser-git
   - libch343ser-git
 
 post_build_script: |
