--- a/aur-repo/pine64-rkdeveloptool-git/PKGBUILD
+++ b/aur-repo/pine64-rkdeveloptool-git/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=pine64-rkdeveloptool-git
 _pkgname=${pkgname#pine64-}
 _pkgname=${_pkgname%-git}
-pkgver=1.1.0
+pkgver=1.1.0.r5.g17823e9
 pkgrel=1
 pkgdesc='fastboot-like CLI tool for flashing rockchip devices, forked to support the PineNote and Quartz64 as well as other Pine64 RK devices'
 arch=('x86_64' 'armv7h' 'aarch64')
