--- a/aur-repo/notepad---git/lilac.yaml
+++ b/aur-repo/notepad---git/lilac.yaml
@@ -12,5 +12,5 @@ post_build_script: |
 update_on:
   - source: git
     git: https://gitee.com/cxasm/notepad--.git
-    branch: ospp-2024
+    branch: master
     use_commit: true
