--- a/aur-repo/tinyget-git/lilac.yaml
+++ b/aur-repo/tinyget-git/lilac.yaml
@@ -15,6 +15,6 @@ repo_depends:
 update_on:
   - source: git
     git: https://gitee.com/tinylab/tinyget.git
-    branch: master
+    branch: ospp-2024
     use_commit: true
   - alias: python
