--- a/aur-repo/bilibili-bin/PKGBUILD
+++ b/aur-repo/bilibili-bin/PKGBUILD
@@ -9,7 +9,7 @@
 # 感谢 Peternal 对 SVG图标 的授权
 pkgname=bilibili-bin
 _pkgname="io.github.msojocs.${pkgname%-bin}"
-pkgver=1.13.6_2
+pkgver=1.14.0_2
 _electronversion=21
 epoch=5
 pkgrel=1
@@ -27,16 +27,16 @@ depends=(
     "electron${_electronversion}"
     'libappindicator-gtk3'
 )
-source_aarch64=("${pkgname%-bin}-${pkgver}-aarch64.deb::${url}/releases/download/v${pkgver//_/-}/io.github.msojocs.${pkgname%-bin}_${pkgver//_/-}_arm64.deb")
-source_x86_64=("${pkgname%-bin}-${pkgver}-x86_64.deb::${url}/releases/download/v${pkgver//_/-}/io.github.msojocs.${pkgname%-bin}_${pkgver//_/-}_amd64.deb")
+source_aarch64=("${pkgname%-bin}-${pkgver}-aarch64.deb::${url}/releases/download/v${pkgver//_/-}/${_pkgname}_${pkgver//_/-}_arm64.deb")
+source_x86_64=("${pkgname%-bin}-${pkgver}-x86_64.deb::${url}/releases/download/v${pkgver//_/-}/${_pkgname}_${pkgver//_/-}_amd64.deb")
 source=(
     "LICENSE-${pkgver}::https://raw.githubusercontent.com/msojocs/bilibili-linux/v${pkgver//_/-}/license"
     "${pkgname%-bin}.sh"
 )
 sha256sums=('21668b8229199de1a523b82805c80d6e110a67fef5766aa7cc3c7df4416d1468'
             '2b2e8aeed33fd71c521e49fd54fb2fa81218d16aef8bccb88d77909055ab8051')
-sha256sums_aarch64=('299b6178ed01749969a2f4ca2bbc68549945f794038122218d5e2f060df70276')
-sha256sums_x86_64=('4953778b0de8dd018b6345d6778f3e92934f6282b957ca0f380d745720e00cca')
+sha256sums_aarch64=('51a188e012e17e8625b99a4046c8fe2348849855d860d7e5e095a105638e8a9d')
+sha256sums_x86_64=('41031d129284eebfdf3cc697ff212869aeca8e296188f3182d1bc63e4bf58ddb')
 build() {
     sed -e "s|@electronversion@|${_electronversion}|g" \
         -e "s|@appname@|${pkgname%-bin}|g" \
