--- a/aur-repo/bilibili-bin/lilac.yaml
+++ b/aur-repo/bilibili-bin/lilac.yaml
@@ -6,7 +6,7 @@ pre_build_script: aur_pre_build(maintainers=['bilibili_xiaok', 'little_sheepycn'
 post_build: aur_post_build
 
 repo_depends:
-  - electron21-bin
+  - electron21
 
 update_on:
   - source: aur
