--- a/aur-repo/fantascene-dynamic-wallpaper-git/PKGBUILD
+++ b/aur-repo/fantascene-dynamic-wallpaper-git/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgname=fantascene-dynamic-wallpaper-git
 srcname=fantascene-dynamic-wallpaper-git
-pkgver=1.8.1.r10.g56ae74e
-pkgrel=2
+pkgver=1.8.1.r13.gd6ef9ab
+pkgrel=1
 pkgdesc=" dynamic wallpaper. A very nice animated wallpaper on X11 systems.Support Movie and Web animated wallpaper."
 arch=(x86_64
     aarch64
