--- a/aur-repo/canopenlinux-git/PKGBUILD
+++ b/aur-repo/canopenlinux-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=canopenlinux-git
 pkgname=canopenlinux-git
-pkgver=4.0.r19.g025ec33
+pkgver=4.0.r20.g059c6b5
 pkgrel=1
 groups=()
 pkgdesc="CANopenNode on Linux devices"
