--- a/aur-repo/xrock-git/PKGBUILD
+++ b/aur-repo/xrock-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=xrock-git
-pkgver=1.0.4.r12.g1a0f131
+pkgver=1.0.5.r0.g9581fea
 pkgrel=1
 epoch=
 pkgdesc="The low level tools for rockchip SOC with maskrom and loader mode support."
