mtkclient-git: auto updated to 2.0.1.r52.g57c0ea0-1

--- a/aur-repo/mtkclient-git/PKGBUILD
+++ b/aur-repo/mtkclient-git/PKGBUILD
@@ -3,7 +3,7 @@
 
 _pkgname="mtkclient"
 pkgname="$_pkgname-git"
-pkgver=2.0.1.r49.g5a3b939
+pkgver=2.0.1.r52.g57c0ea0
 pkgrel=1
 pkgdesc="Unofficial MTK reverse engineering and flash tool"
 url="https://github.com/bkerler/mtkclient"
