--- a/aur-repo/python-comtool-git/PKGBUILD
+++ b/aur-repo/python-comtool-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=python-comtool-git
-pkgver=3.4.1.r2.g012b337
-pkgrel=28
+pkgver=3.4.1.r7.ga99febf
+pkgrel=1
 epoch=
 pkgdesc="A cross platform serial debug tools written by python"
 arch=('any')
