--- a/aur-repo/xiaomi-hyperos-bootloader-bypass-git/PKGBUILD
+++ b/aur-repo/xiaomi-hyperos-bootloader-bypass-git/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgbase=xiaomi-hyperos-bootloader-bypass-git
 pkgname=xiaomi-hyperos-bootloader-bypass-git
-pkgver=1.0.fix.r18.g9456fcc
-pkgrel=66
+pkgver=1.0.fix.r19.g249b98e
+pkgrel=1
 pkgdesc="A PoC that exploits a vulnerability to bypass the Xiaomi HyperOS community restrictions of BootLoader unlocked account bindings."
 arch=(any)
 url="https://github.com/MlgmXyysd/Xiaomi-HyperOS-BootLoader-Bypass"
