ozone: auto updated to 29:3.36-1

--- a/aur-repo/ozone/Ozone.desktop
+++ b/aur-repo/ozone/Ozone.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger Ozone
 Comment=Segger Ozone for Linux
 Exec=/usr/bin/Ozone
-Icon=Ozone.svg
+Icon=Ozone
 Terminal=false
 StartupNotify=false
 Categories=Development
