--- a/aur-repo/crm-git/PKGBUILD
+++ b/aur-repo/crm-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=crm-git
-pkgver=0.2.1.r8.g71ac9da
-pkgrel=3
+pkgver=0.2.1.r21.gd9518cf
+pkgrel=1
 pkgdesc="crm (Cargo registry manager)"
 arch=(x86_64
     aarch64
