--- a/aur-repo/python-comtool/PKGBUILD
+++ b/aur-repo/python-comtool/PKGBUILD
@@ -1,12 +1,13 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=python-comtool
-pkgver=3.4.1
-pkgrel=4
+_name=COMTool
+pkgver=3.3.1
+pkgrel=1
 epoch=
 pkgdesc="A cross platform serial debug tools written by python"
 arch=('any')
-url="https://github.com/Neutree/COMTool"
+url="https://pypi.org/project/COMTool"
 license=('LGPL-3.0-or-later')
 groups=()
 depends=('python'
@@ -37,25 +38,25 @@ backup=()
 options=()
 install=$pkgname.install
 changelog=
-source=("${pkgname#python-}-${pkgver}.tar.gz::${url}/archive/refs/tags/v${pkgver}.tar.gz"
+source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz"
     $pkgname.install)
 noextract=()
-sha256sums=('fcaeeedcf2d84268d1fb601f070f4cfbfe456a947777f2fc2457f33892daa523'
+sha256sums=('8a8423a8de41239f3878f79372ed29e604d7a699f25ac504c4f00fd1d810c6c7'
             '45b92e9788ac186a4fa2bad728fe7956b2afb52c4f4b01481ddd2b26ed47bdc3')
 #validpgpkeys=()
 
 build() {
-    cd "${srcdir}/COMTool-${pkgver}"
+    cd "${srcdir}/${_name}-${pkgver}"
     python -m build --wheel --no-isolation
 }
 
 package() {
-    cd "${srcdir}/COMTool-${pkgver}"
+    cd "${srcdir}/${_name}-${pkgver}"
     python -m installer --destdir="${pkgdir}" dist/*.whl
     rm -rf "${pkgdir}/usr/LICENSE"
     rm -rf "${pkgdir}/usr/README.MD"
-    install -Dm0644 "${srcdir}/COMTool-${pkgver}/COMTool/assets/logo.png" "${pkgdir}/usr/share/pixmaps/${pkgname#python-}.png"
-    install -Dm0644 /dev/stdin "${pkgdir}/usr/share/applications/io.github.neutree.${pkgname#python-}.desktop" << EOF
+    install -Dm0644 "${srcdir}/${_name}-${pkgver}/COMTool/assets/logo.png" "${pkgdir}/usr/share/pixmaps/${pkgname#python-}.png"
+    install -Dm0644 /dev/stdin "${pkgdir}/usr/share/applications/io.github.neutree.${pkgname#python-}.desktop" <<EOF
 [Desktop Entry]
 Version=1.0
 Type=Application
