--- a/aur-repo/jlink-systemview/PKGBUILD
+++ b/aur-repo/jlink-systemview/PKGBUILD
@@ -2,9 +2,9 @@
 # Maintainer: pzl <alsoelp at gmail dot com>
 
 pkgname=jlink-systemview
-pkgver=3.56
+pkgver=3.56a
 pkgrel=0
-epoch=8
+epoch=9
 pkgdesc="Segger SystemView for Linux"
 arch=('i686' 'x86_64')
 license=('custom')
@@ -13,8 +13,8 @@ depends=('jlink-software-and-documentation' 'jlink-systemview-target-src')
 source_x86_64=("SystemView_Linux_V${pkgver/./}_x86_64.tgz::https://www.segger.com/downloads/systemview/systemview_linux_tgz64")
 source_i686=("SystemView_Linux_V${pkgver/./}_i686.tgz::https://www.segger.com/downloads/systemview/systemview_linux_tgz32")
 source=("SystemView.desktop" "SystemView.svg")
-md5sums_x86_64=('e539f58b3573c7f54c4813abefb21cd6')
-md5sums_i686=('efcaefeb1f677577030559819a60abad')
+md5sums_x86_64=('0b6eb77a0fa5c89be31a53c68e48a907')
+md5sums_i686=('20b70ffe5b7ece9b45ae277996e12260')
 md5sums=('89e75b3008c53de7fc22c00da5abba01' '54635efec35cdbb6f60b997a8fceee74')
 url="https://www.segger.com/downloads/jlink/"
 
