--- a/aur-repo/xrock-git/PKGBUILD
+++ b/aur-repo/xrock-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=xrock-git
-pkgver=1.0.5.r5.g92a11ea
+pkgver=1.0.6.r2.gb5442c2
 pkgrel=1
 epoch=
 pkgdesc="The low level tools for rockchip SOC with maskrom and loader mode support."
@@ -10,7 +10,9 @@ arch=(x86_64
     riscv64)
 url="https://github.com/xboot/xrock"
 license=('MIT')
-depends=('libusb')
+depends=(
+    'glibc'
+    'libusb')
 makedepends=('git' 'gcc')
 optdepends=()
 provides=(${pkgname%-git})
@@ -23,8 +25,7 @@ pkgver() {
     git describe --long --tags | sed 's/^v//g' | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
-prepare()
-{
+prepare() {
     git -C "${srcdir}/${pkgname%-git}" clean -dfx
 }
 
