--- a/aur-repo/xrock/PKGBUILD
+++ b/aur-repo/xrock/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=xrock
-pkgver=1.0.5
-pkgrel=1
+pkgver=1.0.6
+pkgrel=0
 epoch=
 pkgdesc="The low level tools for rockchip SOC with maskrom and loader mode support."
 arch=(x86_64
@@ -11,12 +11,14 @@ arch=(x86_64
 url="https://github.com/xboot/xrock"
 license=('MIT')
 groups=()
-depends=('libusb')
+depends=(
+    'glibc'
+    'libusb')
 makedepends=("gcc")
 checkdepends=()
 optdepends=()
 provides=()
-conflicts=(xrock-git)
+conflicts=(xrock)
 replaces=()
 backup=()
 options=()
@@ -24,7 +26,7 @@ install=
 changelog=
 source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/v${pkgver}.tar.gz")
 noextract=()
-sha256sums=('b197994514e1bf899c106c3c70fa26409033a7000d773cbdde917fb69a42d262')
+sha256sums=('4e5956a3c8460f8709f406eadabfae6149a712bfe139b779d824bffbe0255987')
 #validpgpkeys=()
 
 build() {
