--- a/aur-repo/linuxcnc-git/PKGBUILD
+++ b/aur-repo/linuxcnc-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer:  Jason Kercher <jkercher 43 at gmail dot com>
 
 pkgname=linuxcnc-git
-pkgver=2.9.3.r2052.gbee146f4e4
+pkgver=2.9.3.r2054.g7195aeb39e
 pkgrel=1
 pkgdesc="Controls CNC machines. It can drive milling machines, lathes, 3d printers, laser cutters, plasma cutters, robot arms, hexapods, and more (formerly EMC2)"
 arch=('i686' 'x86_64')
