--- a/aur-repo/crm-git/PKGBUILD
+++ b/aur-repo/crm-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=crm-git
-pkgver=0.2.1.r21.gd9518cf
+pkgver=0.2.2.r0.gd392e9a
 pkgrel=1
 pkgdesc="crm (Cargo registry manager)"
 arch=(x86_64
