--- a/aur-repo/i4tools-bin/lilac.yaml
+++ b/aur-repo/i4tools-bin/lilac.yaml
@@ -1,21 +1,7 @@
 maintainers:
   - github: taotieren
-
-build_prefix: multilib
-
-pre_build_script: |
-  update_pkgver_and_pkgrel(_G.newver)
-
-post_build_script: |
-  git_pkgbuild_commit()
-  update_aur_repo()
-
-repo_depends:
-  - libldap24
-
+pre_build_script: aur_pre_build(maintainers=['maoyaotang1'])
+post_build: aur_post_build
 update_on:
-  - source: regex
-    url: "https://www.i4.cn/pro_pc.html"
-    regex: 'i4tools_v(\d+.\d+.\d+).deb'
-  - source: manual
-    manual: 1
+  - source: aur
+    aur: i4tools-bin
