--- a/aur-repo/bilibili-bin/lilac.yaml
+++ b/aur-repo/bilibili-bin/lilac.yaml
@@ -1,13 +1,9 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers=['bilibili_xiaok', 'little_sheepycn', 'zxp19821005', 'whitels'])
-
+pre_build_script: aur_pre_build(maintainers=['bilibili_xiaok', 'little_sheepycn', 'zxp19821005', 'ngdngdc'])
 post_build: aur_post_build
-
 repo_depends:
   - electron21-bin
-
 update_on:
   - source: aur
     aur: bilibili-bin
