--- a/aur-repo/hqdfm-wine/lilac.yaml
+++ b/aur-repo/hqdfm-wine/lilac.yaml
@@ -1,14 +1,9 @@
 maintainers:
   - github: taotieren
-build_prefix: multilib
-pre_build_script: |
-  update_pkgver_and_pkgrel(_G.newver)
-post_build_script: |
-  git_pkgbuild_commit()
-  update_aur_repo()
+pre_build_script: aur_pre_build(maintainers=['taotieren'])
+post_build: aur_post_build
 update_on:
-  - source: regex
-    url: "https://dfm.elecfans.com/downloads"
-    regex: 'HQDFM V(\d+.\d+\w).zip'
+  - source: aur
+    aur: hqdfm-wine
   - source: manual
     manual: 1
