--- a/aur-repo/n-m3u8dl-re-git/PKGBUILD
+++ b/aur-repo/n-m3u8dl-re-git/PKGBUILD
@@ -21,26 +21,30 @@ makedepends=(
     dotnet-sdk)
 backup=()
 options=('!strip' '!debug' '!lto')
-source=("${pkgname%-git}::git+${url}.git")
+source=("${pkgname}::git+${url}.git")
 sha256sums=('SKIP')
 noextract=()
 
-pkgver(){
-    cd "${srcdir}/${pkgname%-git}"
-    git describe --long --tags | sed 's/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g'
+pkgver() {
+    cd "${srcdir}/${pkgname}"
+    (
+        set -o pipefail
+        git describe --long --tag --abbrev=7 2>/dev/null | sed 's/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g' ||
+            printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
+    )
 }
 
 prepare() {
-    git -C "${srcdir}/${pkgname%-git}" clean -dfx
+    git -C "${srcdir}/${pkgname}" clean -dfx
 
-    # cd "${srcdir}/${pkgname%-git}"
+    # cd "${srcdir}/${pkgname}"
     # sed -i 's|net8.0|net7.0|g' src/N_m3u8DL-RE/N_m3u8DL-RE.csproj
 }
 
 build() {
-# DOTNET_CLI_TELEMETRY_OPTOUT=1
+    # DOTNET_CLI_TELEMETRY_OPTOUT=1
 
-    cd "${srcdir}/${pkgname%-git}"
+    cd "${srcdir}/${pkgname}"
 
     if [ "$CARCH" == "aarch64" ]; then
         msg2 "build for arm64"
@@ -52,6 +56,6 @@ build() {
 }
 
 package() {
-    cd "${srcdir}/${pkgname%-git}/artifact/"
+    cd "${srcdir}/${pkgname}/artifact/"
     install -Dm0755 N_m3u8DL-RE "${pkgdir}/usr/bin/${pkgname%-git}"
 }
