poedit-git: auto updated to 3.5.r8.g00ff4b96b-1

--- a/aur-repo/poedit-git/PKGBUILD
+++ b/aur-repo/poedit-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=poedit-git
-pkgver=3.5.r7.gfbfde45ac
+pkgver=3.5.r8.g00ff4b96b
 pkgrel=1
 epoch=
 pkgdesc="Translations editor for Mac, Windows and Unix"
