--- a/aur-repo/hqdfm-wine/lilac.yaml
+++ b/aur-repo/hqdfm-wine/lilac.yaml
@@ -1,9 +1,24 @@
+# maintainers:
+#   - github: taotieren
+# pre_build_script: aur_pre_build(maintainers=['taotieren'])
+# post_build: aur_post_build
+# update_on:
+#   - source: aur
+#     aur: hqdfm-wine
+#   - source: manual
+#     manual: 1
+
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['taotieren'])
-post_build: aur_post_build
+build_prefix: multilib
+pre_build_script: |
+  update_pkgver_and_pkgrel(_G.newver)
+post_build_script: |
+  git_pkgbuild_commit()
+  update_aur_repo()
 update_on:
-  - source: aur
-    aur: hqdfm-wine
+  - source: regex
+    url: "https://dfm.elecfans.com/downloads"
+    regex: 'HQDFM V(\d+.\d+\w).zip'
   - source: manual
     manual: 1
