--- a/aur-repo/qdap-git/PKGBUILD
+++ b/aur-repo/qdap-git/PKGBUILD
@@ -26,8 +26,10 @@ makedepends=(git
     qt5-tools
     pkgconf)
 optdepends=()
-source=("${pkgname}::git+${url}.git")
-sha256sums=('SKIP')
+source=("${pkgname}::git+${url}.git"
+    "git+https://github.com/ma6254/qdap_chips")
+sha256sums=('SKIP'
+    'SKIP')
 
 pkgver() {
     cd "${srcdir}/${pkgname}"
@@ -55,4 +57,16 @@ build() {
 
 package() {
     DESTDIR="${pkgdir}" ninja -C "${srcdir}"/build install
+    install -dm0755 "${pkgdir}/usr/share/${pkgname%-git}/chips"
+    cd ${srcdir}/qdap_chips
+    find . -maxdepth 1 -not -name ".*" -type f -exec cp -v {} ${pkgdir}/usr/share/${pkgname%-git}/chips/ \;
+    mv ${pkgdir}/usr/bin/QDAP "${pkgdir}/usr/share/${pkgname%-git}/"
+    install -Dm755 /dev/stdin "${pkgdir}/usr/bin/${pkgname%-git}" <<EOF
+#!/usr/bin/env bash
+
+cd /usr/share/qdap/
+
+./QDAP
+EOF
+    sed -i 's|/usr/bin/QDAP|/usr/bin/qdap|g' ${pkgdir}/usr/share/applications/io.github.ma6254.qdap.desktop
 }
